2008-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-render-manager.c (hd_render_manager_set_order): Do not
	  try to hide the status_area actor if it is not there.

2008-12-18  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-layout-dialog.c (deleted):
	* src/home/hd-layout-dialog.h (deleted): There is now a gtk+ based
	  Activate views dialog in hildon-home.

	* src/home/Makefile.am: Remove hd-layout-dialog.[ch]

	* src/home/hd-home-dbus.xml: Remove ShowActivateViews method from
	  interface.

	* src/home/hd-home.c:
	* src/home/hd-render-manager.c:
	* src/home/hd-render-manager.h: Remove layout mode used by the clutter
	  based Activate views dialog.

2008-12-18  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Removed fake w50 menu, now real .desktop files are read.
	Added hard-coded ordering for applications in main category.
	Added support for X-Text-Domain in .desktop files.

	* data/desktop/Makefile.am: Removed .w50-desktop files.
	* src/launcher/hd-launcher-item.c (hd_launcher_item_parse_keyfile,
	  _hd_launcher_app_main_position, hd_launcher_item_new_from_keyfile):
	* src/launcher/hd-launcher-item.h (HD_LAUNCHER_ITEM_TOP_CATEGORY,
	  HD_APPLICATION_LAUNCHER): Hard-cde which apps and in which order they
	  go in the main category.
	* src/launcher/hd-launcher-tree.c (walk_visit_func): Don't load
	.w50-desktop files.
	* src/launcher/hd-launcher.c (hd_launcher_create_page,
	  hd_launcher_lazy_traverse_tree): If .desktop file has X-Text-Domain,
	  use it.

2008-12-18  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-render-manager.c
	* src/home/hd-task-navigator.c:
	* src/home/hd-home-view.c:
	Added calls to new clutter function actor_set_visibility_detect to
	skip visibility detection on things that don't need it/break
	with it
	* src/mb/hd-comp-mgr.c:
	Added code to add update handlers to TFP textures, and to update
	only the area of the screen that needs updating. This requires a
	new clutter.	
